--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
   },
   "homepage": "https://github.com/VenRoot/PMAsset_Back#readme",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/mssql": "^7.1.4",
-    "@types/node": "^16.11.10"
+    "@types/node": "^16.11.10",
+    "typescript": "^4.6.0-dev.20211125"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "mssql": "^7.3.0",
     "v8-compile-cache": "^2.3.0"
   }
