--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-        node-version: 17
-      - run: npm ci
-      - run: npm i typescript
-      - run: npm run build
+          node-version: 17
+      - name: Installing dependencies
+        run: npm ci
+      - name: Setting up TypeScript Compiler
+        run: npm i typescript
+      - name: Building project
+        run: npm run build
