--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "typescript": "^4.6.0-dev.20211125"
   },
   "dependencies": {
+    "api-key-auth": "^0.2.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
+    "morgan": "^1.10.0",
     "mssql": "^7.3.0",
     "v8-compile-cache": "^2.3.0"
   }
