--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/VenRoot/PMAsset_Back#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.4",
     "@types/node": "^16.11.10",
     "typescript": "^4.6.0-dev.20211125"
