--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/VenRoot/PMAsset_Back#readme",
   "devDependencies": {
+    "@types/activedirectory2": "^1.2.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
@@ -30,6 +31,7 @@
     "typescript": "^4.6.0-dev.20211125"
   },
   "dependencies": {
+    "activedirectory2": "^2.1.0",
     "api-key-auth": "^0.2.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
