--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.4",
     "@types/node": "^16.11.11",
+    "@types/node-schedule": "^1.3.2",
     "typescript": "^4.6.0-dev.20211125"
   },
   "dependencies": {
@@ -42,6 +43,7 @@
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
     "mssql": "^7.3.0",
+    "node-schedule": "^2.1.0",
     "v8-compile-cache": "^2.3.0"
   }
 }
