--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm run clean && tsc",
     "start": "npm run build && node out/index.js",
-    "clean": "rm -rf ./out"
+    "clean": "rm -rf ./out/*"
   },
   "repository": {
     "type": "git",
