--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.4",
-    "@types/node": "^16.11.11",
+    "@types/node": "^17.0.0",
     "@types/node-schedule": "^1.3.2",
+    "isomorphic-fetch": "^3.0.0",
     "typescript": "^4.6.0-dev.20211125"
   },
   "dependencies": {
@@ -36,7 +37,7 @@
     "activedirectory2": "^2.1.0",
     "api-key-auth": "^0.2.3",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
