--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/mssql": "^7.1.4",
     "@types/node": "^17.0.8",
     "@types/node-schedule": "^1.3.2",
+    "@types/spdy": "^3.4.5",
     "isomorphic-fetch": "^3.0.0",
     "typescript": "^4.6.0-dev.20211125"
   },
@@ -45,6 +46,7 @@
     "morgan": "^1.10.0",
     "mssql": "^7.3.0",
     "node-schedule": "^2.1.0",
+    "spdy": "^4.0.2",
     "v8-compile-cache": "^2.3.0"
   }
 }
