--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/activedirectory2": "^1.2.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/md5": "^2.3.1",
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.4",
     "@types/node": "^17.0.8",
@@ -43,9 +44,11 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "helmet": "^5.0.1",
+    "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "mssql": "^7.3.0",
     "node-schedule": "^2.1.0",
+    "pdffiller": "^0.0.11",
     "spdy": "^4.0.2",
     "v8-compile-cache": "^2.3.0"
   }
