--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm run clean:windows && tsc",
-    "start": "npm run build && node out/index.js",
+    "build": "npm run clean && tsc",
+    "build:windows": "npm run clean:windows && tsc",
+    "start": "node start.js",
+    "start:widnows": "npm run build:windows && node out/index.js",
+    "start:linux": "npm run build && node out/index.js",
     "clean": "rm -rf ./out/*",
     "clean:windows": "del .\\out\\*.*"
   },
@@ -29,7 +32,7 @@
     "@types/md5": "^2.3.1",
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.4",
-    "@types/node": "^17.0.8",
+    "@types/node": "^17.0.14",
     "@types/node-schedule": "^1.3.2",
     "@types/spdy": "^3.4.5",
     "isomorphic-fetch": "^3.0.0",
@@ -42,12 +45,12 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.1",
     "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
+    "dotenv": "^15.0.0",
     "express": "^4.17.2",
-    "helmet": "^5.0.1",
+    "helmet": "^5.0.2",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
-    "mssql": "^7.3.0",
+    "mssql": "^8.0.1",
     "node-schedule": "^2.1.0",
     "pdffiller": "^0.0.11",
     "spdy": "^4.0.2",
