--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/md5": "^2.3.2",
     "@types/morgan": "^1.9.3",
     "@types/mssql": "^7.1.4",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.16",
     "@types/node-schedule": "^1.3.2",
     "@types/spdy": "^3.4.5",
@@ -51,6 +52,7 @@
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "mssql": "^8.0.2",
+    "multer": "^1.4.4",
     "node-schedule": "^2.1.0",
     "pdffiller": "^0.0.11",
     "spdy": "^4.0.2",
