--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "helmet": "^5.0.2",
+    "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
     "morgan": "^1.10.0",
     "mssql": "^8.0.2",
