--- a/package.json
+++ b/package.json
@@ -31,23 +31,24 @@
     "@types/express": "^4.17.13",
     "@types/md5": "^2.3.2",
     "@types/morgan": "^1.9.3",
-    "@types/mssql": "^7.1.4",
+    "@types/mssql": "^7.1.5",
     "@types/multer": "^1.4.7",
-    "@types/node": "^17.0.16",
+    "@types/node": "^17.0.21",
     "@types/node-schedule": "^1.3.2",
     "@types/spdy": "^3.4.5",
     "isomorphic-fetch": "^3.0.0",
-    "typescript": "^4.6.0-dev.20220210"
+    "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@pm2/io": "^5.0.0",
     "@types/bcrypt": "^5.0.0",
     "activedirectory2": "^2.1.0",
     "api-key-auth": "^0.2.3",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.1",
+    "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
     "helmet": "^5.0.2",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
