--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@types/node-schedule": "^1.3.2",
     "@types/spdy": "^3.4.5",
     "isomorphic-fetch": "^3.0.0",
-    "typescript": "^4.6.2"
+    "typescript": "^4.7.0-dev.20220315"
   },
   "dependencies": {
     "@pm2/io": "^5.0.0",
