--- a/tsconfig.json
+++ b/tsconfig.json
@@ -98,5 +98,8 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
     "pretty": false
-  }
+  },
+  "exclude": [
+    "./test.ts"
+  ]
 }
